--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
@@ -81,7 +82,8 @@ section.info-two article.art-one p {
     padding-bottom: 2rem;
 }
 
-.articles {
+section.five ol {
+    list-style: none;
     margin-top: 2.5rem;
     margin-left: 2rem;
 }
@@ -102,19 +104,21 @@ section.info-two article.art-one p {
     margin-top: -2.5rem;
     background-color: rgba(139, 72, 191, 0.2);
     color: var(--color-dark-blue);
-    border-radius: 16px;
-    width: 100vw;
+    border-radius: 16px 0 0 16px;
+    ;
+    width: 93vw;
     height: 7vh;
     text-align: center;
     font-size: 1rem;
 }
 
 .text {
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-size: 1rem;
     margin-right: 2.5rem;
     line-height: 28px;
     color: #B3B2B7;
+    margin-bottom: 1rem;
 }
 
 .sanyo,
@@ -245,6 +249,9 @@ footer>ul {
 }
 
 .redes-sociales {
+    display: flex;
+    width: 100vw;
+    justify-content: space-evenly;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
@@ -346,5 +353,41 @@ footer>p {
         font-size: 1.4rem;
         margin-right: 7rem;
         margin-left: 8rem;
+    }
+
+    section.five ol {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-top: 2rem;
+        background-color: #FAFAFA;
+    }
+
+    section.five ol li {
+        display: flex;
+        width: 37%;
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+    }
+
+    .num {
+        height: 5vh;
+        width: 19vw;
+        margin-top: -1rem;
+    }
+
+    .title {
+        background-color: transparent;
+        display: inline-block;
+        margin-top: -1rem;
+        margin-right: 34rem;
+    }
+
+    .text {
+        display: flex;
+        margin-left: -53rem;
+        color: #B3B2B7;
+        margin-top: 1.5rem;
     }
 }
