--- a/src/style.css
+++ b/src/style.css
@@ -181,28 +181,31 @@ section.info-three button {
 }
 
 .info-four {
+    display: flex;
     background-color: #3cddf3;
     color: white;
     margin-top: 4rem;
     width: 100vw;
-    height: 63vh;
+    height: 70vh;
 }
 
 article.info-four h2 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     padding-top: 2rem;
+    padding-left: 5rem;
+    padding-right: 2em;
 }
 
 article.info-four button {
-    margin-top: 2.5rem;
-    margin-left: 11rem;
+    margin-top: 7rem;
+    margin-left: 17rem;
     border: none;
     border-radius: 21px;
-    width: 24vw;
-    height: 7vh;
-    background-color: var(--color-dark-blue);
-    color: white;
+    width: 9vw;
+    height: 5vh;
+    background-color: white;
+    color: var(--color-violet);
 }
 
 footer {
@@ -389,5 +392,100 @@ footer>p {
         margin-left: -53rem;
         color: #B3B2B7;
         margin-top: 1.5rem;
+    }
+
+    .players {
+        display: flex;
+        flex-flow: wrap;
+
+    }
+
+    .sanyo,
+    .navarro,
+    .lebron {
+        display: block;
+        position: relative;
+        margin-top: 5rem;
+        background-color: #FAFAFA;
+        width: 32vw;
+        height: 27vh;
+        padding: 0px 32px;
+    }
+
+    .img-lebron,
+    .img-sanyo,
+    .img-navarro {
+        margin-left: 9rem;
+        width: 7vw;
+        height: 12vh;
+        margin-top: -3rem;
+    }
+
+    .title-lebron,
+    .title-sanyo,
+    .title-navarro {
+        text-align: center;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 1.3rem;
+        color: var(--color-dark-blue);
+    }
+
+    .p-lebron,
+    .p-sanyo,
+    .p-navarro {
+        margin-left: 1rem;
+        text-align: center;
+        font-size: 0.8rem;
+        line-height: 20px;
+        margin-right: 1rem;
+        color: #B9B9C1;
+    }
+
+    section.info-three button {
+        margin-top: 2rem;
+        margin-left: 39rem;
+        border: none;
+        border-radius: 21px;
+        width: 9vw;
+        height: 5vh;
+        background-color: var(--color-violet);
+        color: white;
+    }
+
+    .info-four {
+        display: flex;
+        background-color: var(--color-violet);
+        height: 29vh;
+    }
+
+    article.info-four h2 {
+        text-align: start;
+        margin-left: 8rem;
+        margin-right: 0rem;
+        font-size: 3rem;
+        width: 50%;
+        margin-top: 2rem;
+    }
+
+    article.info-four button {
+        margin-top: 5.5rem;
+        margin-right: 10rem;
+        border: none;
+        border-radius: 21px;
+        width: 9vw;
+        height: 5vh;
+        background-color: white;
+        color: var(--color-violet);
+    }
+
+    footer {
+        display: flex;
+        flex-direction: row-reverse;
+        flex-wrap: wrap-reverse;
+        align-items: flex-end;
+        align-content: stretch;
+        justify-content: space-around;       
+        padding: 5rem 8rem;
     }
 }
