--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 
 * {
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'Be Vietnam Pro', sans-serif;
 }
@@ -31,7 +32,7 @@ header {
     margin-left: 2rem;
 }
 
-.menuHamb,
+.menu,
 header>button {
     display: none;
 }
@@ -69,6 +70,10 @@ section.info-two article.art-one h2 {
 
 }
 
+.text-desktop {
+    display: none;
+}
+
 section.info-two article.art-one p {
     color: var(--color-variant-gray);
     padding-left: 2rem;
@@ -77,7 +82,8 @@ section.info-two article.art-one p {
     padding-bottom: 2rem;
 }
 
-.articles {
+section.five ol {
+    list-style: none;
     margin-top: 2.5rem;
     margin-left: 2rem;
 }
@@ -98,19 +104,21 @@ section.info-two article.art-one p {
     margin-top: -2.5rem;
     background-color: rgba(139, 72, 191, 0.2);
     color: var(--color-dark-blue);
-    border-radius: 16px;
-    width: 100vw;
+    border-radius: 16px 0 0 16px;
+    ;
+    width: 93vw;
     height: 7vh;
     text-align: center;
     font-size: 1rem;
 }
 
 .text {
-    margin-top: 2rem;
+    margin-top: 1rem;
     font-size: 1rem;
     margin-right: 2.5rem;
     line-height: 28px;
     color: #B3B2B7;
+    margin-bottom: 1rem;
 }
 
 .sanyo,
@@ -177,13 +185,15 @@ section.info-three button {
     color: white;
     margin-top: 4rem;
     width: 100vw;
-    height: 63vh;
+    height: 70vh;
 }
 
 article.info-four h2 {
     text-align: center;
-    font-size: 2.5rem;
+    font-size: 3rem;
     padding-top: 2rem;
+    padding-left: 5rem;
+    padding-right: 2em;
 }
 
 article.info-four button {
@@ -241,6 +251,9 @@ footer>ul {
 }
 
 .redes-sociales {
+    display: flex;
+    width: 100vw;
+    justify-content: space-evenly;
     margin-top: 2rem;
     margin-bottom: 2rem;
 }
@@ -249,4 +262,275 @@ footer>p {
     padding-bottom: 3rem;
     padding-top: 2rem;
     color: #8C8C94;
+}
+
+@media screen and (min-width: 1440px) {
+    header {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-left: 2rem;
+        margin-right: 10rem;
+        margin-top: 6rem;
+    }
+
+    .menu {
+        display: block;
+        width: 40vw;
+    }
+
+    .menu-desk {
+        display: flex;
+        flex-direction: row;
+        list-style: none;
+        justify-content: space-evenly;
+    }
+
+    .menu-hamb {
+        display: none;
+    }
+
+    header>button {
+        display: block;
+        border: none;
+        border-radius: 23px;
+        width: 10vw;
+        height: 5vh;
+        background-color: var(--color-violet);
+        color: white;
+    }
+
+    .info-one {
+        display: flex;
+    }
+
+    .padel {
+        margin-top: -3rem;
+        margin-left: -1rem;
+    }
+
+    article.info-one div h1 {
+        margin-top: 2rem;
+        margin-right: 7rem;
+        margin-left: 11rem;
+        font-size: 3rem;
+    }
+
+    article.info-one div p {
+        margin-left: 9rem;
+        font-size: 1.1rem;
+        margin-right: 7rem;
+    }
+
+    article.info-one div button {
+        margin-right: 7rem;
+        border-radius: 23px;
+        width: 10vw;
+        height: 5vh;
+        background-color: var(--color-violet);
+        color: white;
+    }
+
+    .text-mobile {
+        display: none;
+    }
+
+    .text-desktop {
+        display: block;
+    }
+
+    .art-one {
+        display: flex;
+        background-color: #8b48bf;
+    }
+
+    section.info-two article.art-one h2 {
+        padding-left: 7rem;
+        margin-top: 1.5rem;
+    }
+
+    section.info-two article.art-one p.text-desktop {
+        width: 50vw;
+        margin-top: 3rem;
+        font-size: 1.4rem;
+        margin-right: 7rem;
+        margin-left: 8rem;
+    }
+
+    section.five ol {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        margin-top: 2rem;
+        background-color: #FAFAFA;
+    }
+
+    section.five ol li {
+        display: flex;
+        width: 37%;
+        margin-top: 4rem;
+        margin-bottom: 1rem;
+    }
+
+    .num {
+        height: 5vh;
+        width: 19vw;
+        margin-top: -1rem;
+    }
+
+    .title {
+        background-color: transparent;
+        display: inline-block;
+        margin-top: -1rem;
+        margin-right: 34rem;
+    }
+
+    .text {
+        display: flex;
+        margin-left: -53rem;
+        color: #B3B2B7;
+        margin-top: 1.5rem;
+    }
+
+    .players {
+        display: flex;
+        flex-flow: wrap;
+
+    }
+
+    .sanyo,
+    .navarro,
+    .lebron {
+        display: block;
+        position: relative;
+        margin-top: 5rem;
+        background-color: #FAFAFA;
+        width: 32vw;
+        height: 27vh;
+        padding: 0px 32px;
+    }
+
+    .img-lebron,
+    .img-sanyo,
+    .img-navarro {
+        margin-left: 9rem;
+        width: 7vw;
+        height: 12vh;
+        margin-top: -3rem;
+    }
+
+    .title-lebron,
+    .title-sanyo,
+    .title-navarro {
+        text-align: center;
+        margin-right: 1rem;
+        margin-top: 1rem;
+        margin-bottom: 1.3rem;
+        color: var(--color-dark-blue);
+    }
+
+    .p-lebron,
+    .p-sanyo,
+    .p-navarro {
+        margin-left: 1rem;
+        text-align: center;
+        font-size: 0.8rem;
+        line-height: 20px;
+        margin-right: 1rem;
+        color: #B9B9C1;
+    }
+
+    section.info-three button {
+        margin-top: 2rem;
+        margin-left: 39rem;
+        border: none;
+        border-radius: 21px;
+        width: 9vw;
+        height: 5vh;
+        background-color: var(--color-violet);
+        color: white;
+    }
+
+    .info-four {
+        display: flex;
+        background-color: var(--color-violet);
+        height: 29vh;
+    }
+
+    article.info-four h2 {
+        display: flex;
+        margin-top: 0rem;
+        width: 50%;
+        font-size: 2.6rem;
+        text-align: start;
+        margin-left: 5rem;
+    }
+
+    article.info-four button {
+        margin-top: 4.5rem;
+        margin-left: 22rem;
+        border: none;
+        border-radius: 21px;
+        width: 9vw;
+        height: 5vh;
+        background-color: white;
+        color: var(--color-violet);
+    }
+
+    footer {
+        position: relative;
+        flex-direction: row-reverse;
+        justify-content: space-around;
+        padding: 5rem 6rem;
+        height: 29vh;
+    }
+
+    .logo-f {
+        position: absolute;
+        margin-bottom: 8rem;
+        margin-left: 9rem;
+        top: 4rem;
+        left: -2rem;
+    }
+
+    footer>form>input {
+        border: none;
+        border-radius: 20px;
+        height: 4vh;
+        width: 13vw;
+        position: relative;
+        bottom: 5rem;
+    }
+
+    footer>form>button {
+        border-radius: 18px;
+        height: 4vh;
+        width: 4vw;
+        position: relative;
+        bottom: 5rem;
+    }
+
+    footer>ul {
+        position: relative;
+        bottom: 1rem;
+        line-height: 2rem;
+        width: 50%;
+    }
+
+    .redes-sociales {
+        position: absolute;
+        width: 10rem;
+        left: 6rem;
+        bottom: 2rem;
+    }
+
+    footer>p {
+        order: -1;
+        color: #8c8c94;
+        font-size: 0.8rem;
+        position: absolute;
+        top: 11rem;
+        right: 8rem;
+    }
 }
